<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/color_bg_utama"
    tools:context=".ui.lokasiIzin.IzinLokasiActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo_batani_png"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView

        android:id="@+id/imageView4"
        android:layout_width="314dp"
        android:layout_height="302dp"

        android:contentDescription="@string/todo" android:src="@drawable/lokasigrafis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green_200"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="15dp"
        android:text="@string/access_location"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/green_700"
        android:gravity="center"
        android:fontFamily="@font/sen_medium"
        android:text="@string/batani_will_access_your_location_only_while_using_the_app"
        app:layout_constraintTop_toBottomOf="@+id/materialButton"
        tools:layout_editor_absoluteX="0dp"

        />
</androidx.constraintlayout.widget.ConstraintLayout>