<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/carddetail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="12dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/gambar_detail"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nama_tanaman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gambar_detail"
            android:textSize="30sp"
            android:textColor="@color/green_700"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/buah_naga" />

        <TextView
            android:id="@+id/dekripsi_tanaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/nama_tanaman"
            android:text="@string/deskripsi_batani_infoapl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="20dp" />

        <TextView
            android:id="@+id/judul_cara"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cara merawat"
            app:layout_constraintTop_toBottomOf="@id/dekripsi_tanaman"
            app:layout_constraintLeft_toLeftOf="@id/dekripsi_tanaman"
            android:textColor="@color/green_700"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/isi_cara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintLeft_toLeftOf="@+id/dekripsi_tanaman"
            app:layout_constraintTop_toBottomOf="@+id/judul_cara" />

        <TextView
            android:id="@+id/judul_waktu"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waktu_penanaman"
            app:layout_constraintTop_toBottomOf="@id/isi_cara"
            app:layout_constraintLeft_toLeftOf="@id/dekripsi_tanaman"
            android:textColor="@color/green_700"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/watu_penanaman"
            android:layout_width="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/judul_waktu"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/isi_cara" />

        <TextView
            android:id="@+id/judul_ph"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ph_tanah"
            app:layout_constraintTop_toBottomOf="@id/watu_penanaman"
            app:layout_constraintLeft_toLeftOf="@id/dekripsi_tanaman"
            android:textColor="@color/green_700"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/ph_tanah"
            android:layout_width="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/judul_ph"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/watu_penanaman" />

        <TextView
            android:id="@+id/judul_jenis"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_tanah"
            app:layout_constraintTop_toBottomOf="@id/judul_ph"
            app:layout_constraintLeft_toLeftOf="@id/dekripsi_tanaman"
            android:textColor="@color/green_700"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/jenis_tanah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/dekripsi_tanaman"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/judul_jenis" />
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:translationY="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:scaleType="centerCrop"
            android:src="@drawable/borderdetail"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
