<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_bg_utama"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <View
        android:id="@+id/green_canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/green_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.375" />

   
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/green_canvas"
        app:layout_constraintBottom_toBottomOf="@id/green_canvas"
        app:layout_constraintStart_toStartOf="@id/green_canvas"
        app:layout_constraintEnd_toEndOf="@id/green_canvas">

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="165dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/profilepetani" />

        <TextView
            android:id="@+id/email_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bataniers"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:gravity="center" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_informasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cornerRadius="12dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/color_button_settings"
        android:drawableLeft="@drawable/baseline_help_24"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/informasi_aplikasi"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green_canvas" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFeedback"
        app:cornerRadius="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/color_button_settings"
        android:drawableLeft="@drawable/baseline_feedback_24"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:paddingVertical="15dp"
        android:text="@string/feedback"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_informasi" />

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/garis"
        android:layout_height="wrap_content"
        android:translationY="-80dp"
        android:layout_marginHorizontal="30dp"
        android:src="@drawable/garis"
        app:layout_constraintTop_toBottomOf="@id/buttonFeedback"
        tools:layout_editor_absoluteX="25dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:translationY="-160dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/color_button_settings"
        android:drawableLeft="@drawable/baseline_logout_24"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:paddingVertical="15dp"
        android:text="Logout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/garis" />


</androidx.constraintlayout.widget.ConstraintLayout>
