<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/refresh_lokasi"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_refresh_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="268dp"
        android:layout_height="199dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loadingair"
        tools:visibility="visible" />
    <ImageView
        android:id="@+id/info_awan"
        android:layout_width="190dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/info_awan"
        android:src="@drawable/rainy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nama_kota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/poppins_bold"
        android:text="..."

        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_awan" />

    <!-- Wrapper ConstraintLayout to group temperature info and align horizontally -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_info_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nama_kota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:contentDescription="@string/todo"
            android:id="@+id/icon_suhu"
            android:layout_width="26dp"
            android:layout_height="30dp"
            android:src="@drawable/iconstemperature"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/derajat_angka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_21"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/icon_suhu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/partly_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/partly_cloud"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/derajat_angka"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container3child"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_info_wrapper"
        app:layout_constraintVertical_bias="0.333"
        tools:layout_editor_absoluteX="-16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerParameterHorziontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="@id/container3child">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/container_parameter_cuaca"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/baseline_image_24"
                app:layout_constraintEnd_toStartOf="@+id/container_parameter_cuaca2"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/containerParameterHorziontal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/container_parameter_cuaca2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/baseline_image_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/container_parameter_cuaca"
                app:layout_constraintTop_toTopOf="@+id/containerParameterHorziontal" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/container_parameter_cuaca3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"

            android:src="@drawable/baseline_image_24"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerParameterHorziontal" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
